--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "chalk": "^5.4.1",
+    "clipboardy": "^4.0.0",
     "commander": "^14.0.0",
     "fs-extra": "^11.3.0",
     "inquirer": "^12.8.2",
