--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "totp-cli",
+  "name": "totp-client",
   "version": "1.0.0",
   "description": "A CLI app for TOTP (Time-based One-Time Password) generation with interactive Google Authenticator-style interface",
   "main": "dist/index.js",
   "bin": {
-    "totp-cli": "./dist/cli.js"
+    "totp-client": "./dist/cli.js"
   },
   "files": [
     "dist/**/*",
@@ -13,19 +13,22 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vpetar/totp-cli.git"
+    "url": "git+https://github.com/vpetar/totp-client.git"
   },
   "bugs": {
-    "url": "https://github.com/vpetar/totp-cli/issues"
+    "url": "https://github.com/vpetar/totp-client/issues"
   },
-  "homepage": "https://github.com/vpetar/totp-cli#readme",
+  "homepage": "https://github.com/vpetar/totp-client#readme",
   "scripts": {
     "build": "tsc",
     "start": "npm run build && node dist/cli.js",
     "dev": "tsc && node dist/cli.js",
     "clean": "rm -rf dist",
     "prepublishOnly": "npm run clean && npm run build",
-    "test": "echo \"No tests specified yet\" && exit 0",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --coverage --ci --watchAll=false",
     "lint": "echo \"No linter configured yet\" && exit 0",
     "prepare": "npm run build"
   },
@@ -47,9 +50,13 @@
     "linux"
   ],
   "devDependencies": {
+    "@jest/globals": "^30.0.5",
     "@types/fs-extra": "^11.0.4",
     "@types/inquirer": "^9.0.8",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.1.0",
+    "jest": "^30.0.5",
+    "ts-jest": "^29.4.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
