--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     /* Language and Environment */
     "target": "ES2020",
     "lib": ["ES2020"],
-    "types": ["node"],
+    "types": ["node", "jest"],
     
     /* Modules */
     "module": "commonjs",
