--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@inquirer/search": "^3.0.17",
     "chalk": "^5.4.1",
     "clipboardy": "^4.0.0",
     "commander": "^14.0.0",
